--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@nestjs/graphql": "^10.0.22",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.2.1",
-    "apollo-server-express": "^3.10.1",
+    "apollo-server-express": "^3.10.2",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "graphql": "^16.6.0",
     "reflect-metadata": "^0.1.13",
@@ -30,32 +32,33 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.4.0",
-    "@jest/types": "^28.1.3",
+    "@jest/types": "^29.0.1",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "14.5.8",
-    "@nrwl/eslint-plugin-nx": "14.5.8",
-    "@nrwl/jest": "14.5.8",
-    "@nrwl/linter": "14.5.8",
-    "@nrwl/nest": "^14.5.8",
-    "@nrwl/node": "14.5.8",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "14.5.8",
-    "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
+    "@nrwl/cli": "14.5.10",
+    "@nrwl/eslint-plugin-nx": "14.5.10",
+    "@nrwl/jest": "14.5.10",
+    "@nrwl/linter": "14.5.10",
+    "@nrwl/nest": "14.5.10",
+    "@nrwl/node": "14.5.10",
+    "@nrwl/nx-cloud": "14.5.4",
+    "@nrwl/workspace": "14.5.10",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.7.13",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "~8.23.0",
+    "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
-    "jest": "27.5.1",
-    "nx": "14.5.8",
+    "jest": "29.0.1",
+    "nx": "14.5.10",
     "prettier": "^2.6.2",
     "prisma": "^4.2.1",
-    "ts-jest": "27.1.4",
+    "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
-    "typescript": "~4.7.4"
+    "typescript": "~4.8.2"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} libs/backend/database/seed/seed-db.ts"
