--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
   "root": true,
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": { "project": "./tsconfig.base.json" },
   "ignorePatterns": ["**/*"],
-  "plugins": ["@nrwl/nx", "import"],
+  "plugins": ["@nrwl/nx", "import", "prettier"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
@@ -23,7 +25,15 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
-      "extends": ["plugin:@nrwl/nx/typescript"],
+      "extends": [
+        "plugin:@nrwl/nx/typescript",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:prettier/recommended",
+        "plugin:import/typescript",
+        "plugin:jest/recommended",
+        "plugin:jest/style"
+      ],
       "rules": {
         "import/order": [
           "error",
@@ -47,7 +57,82 @@
             ],
             "pathGroupsExcludedImportTypes": ["builtin"]
           }
-        ]
+        ],
+        "@typescript-eslint/await-thenable": "error",
+        "@typescript-eslint/explicit-module-boundary-types": 0,
+        "@typescript-eslint/explicit-function-return-type": "error",
+        "@typescript-eslint/explicit-member-accessibility": 0,
+        "@typescript-eslint/member-delimiter-style": 0,
+        "@typescript-eslint/member-ordering": "error",
+        "@typescript-eslint/no-confusing-non-null-assertion": "error",
+        "@typescript-eslint/no-empty-interface": 0,
+        "@typescript-eslint/no-explicit-any": "error",
+        "@typescript-eslint/no-extra-non-null-assertion": "error",
+        "@typescript-eslint/no-floating-promises": [
+          "error",
+          {
+            "ignoreVoid": true
+          }
+        ],
+        "@typescript-eslint/no-non-null-assertion": "error",
+        "@typescript-eslint/no-use-before-define": 0,
+        "@typescript-eslint/no-unused-vars": [
+          "error",
+          {
+            "argsIgnorePattern": "^_"
+          }
+        ],
+        "@typescript-eslint/no-var-requires": 0,
+        "@typescript-eslint/switch-exhaustiveness-check": "error",
+        "array-bracket-newline": ["error", "consistent"],
+        "array-bracket-spacing": ["error", "never"],
+        "array-callback-return": "error",
+        "block-spacing": ["error"],
+        "brace-style": "error",
+        "camelcase": [
+          0,
+          {
+            "properties": "never"
+          }
+        ],
+        "complexity": "error",
+        "computed-property-spacing": ["error", "never"],
+        "curly": ["error", "all"],
+        "default-case": 0,
+        "default-case-last": 0,
+        "dot-location": ["error", "property"],
+        "dot-notation": "error",
+        "eqeqeq": "error",
+        "eol-last": "error",
+        "func-call-spacing": ["error", "never"],
+        "func-style": "error",
+        "import/no-unresolved": 0,
+        "jest/no-conditional-expect": 0,
+        "key-spacing": "error",
+        "keyword-spacing": "error",
+        "lines-between-class-members": "error",
+        "newline-per-chained-call": 0,
+        "no-console": [
+          "error",
+          {
+            "allow": ["warn", "error"]
+          }
+        ],
+        "no-dupe-keys": "error",
+        "no-else-return": "error",
+        "no-implicit-coercion": "error",
+        "no-invalid-this": "error",
+        "no-lonely-if": "error",
+        "no-multi-spaces": "error",
+        "no-return-await": "error",
+        "no-trailing-spaces": "error",
+        "no-useless-return": "error",
+        "no-unneeded-ternary": "error",
+        "prefer-arrow-callback": ["error"],
+        "prefer-const": "error",
+        "prettier/prettier": ["error"],
+        "template-curly-spacing": ["error", "never"],
+        "valid-typeof": "error"
       }
     },
     {
