chore: bumping deps

--- a/nx.json
+++ b/nx.json
@@ -25,5 +25,18 @@
       "dependsOn": ["^build"]
     }
   },
-  "defaultProject": "api"
+  "defaultProject": "api",
+  "generators": {
+    "@nrwl/react": {
+      "application": {
+        "babel": true
+      }
+    },
+    "@nrwl/next": {
+      "application": {
+        "style": "css",
+        "linter": "eslint"
+      }
+    }
+  }
 }
