chore: project setup

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@backend/database": ["libs/backend/database/src/index.ts"],
-      "@backend/tests": ["libs/backend/tests/src/index.ts"]
+      "@backend/tests": ["libs/backend/tests/src/index.ts"],
+      "@front/api": ["libs/graphql/types/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
