chore: eslint rules related changes

--- a/libs/backend/database/project.json
+++ b/libs/backend/database/project.json
@@ -1,21 +1,13 @@
 {
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/database/src",
+  "sourceRoot": "libs/backend/database/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/database/**/*.ts"]
-      }
-    },
-    "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/database"],
-      "options": {
-        "jestConfig": "libs/database/jest.config.ts",
-        "passWithNoTests": true
+        "lintFilePatterns": ["libs/backend/database/**/*.ts"]
       }
     }
   },
