--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
     "jest-environment-jsdom": "29.0.3",
     "nx": "14.7.5",
     "postcss": "^8.4.16",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.3.1",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.1.8",
