--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,6 +13,7 @@
     "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
+    "noImplicitAny": true,
     "baseUrl": ".",
     "paths": {
       "@backend/database": ["libs/backend/database/src/index.ts"],
