--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
   "dependencies": {
     "@graphql-typed-document-node/core": "^3.1.1",
     "@nestjs/apollo": "^10.1.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/graphql": "^10.1.1",
+    "@nestjs/common": "^9.1.1",
+    "@nestjs/core": "^9.1.1",
+    "@nestjs/graphql": "^10.1.2",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.1.1",
     "@prisma/client": "^4.3.1",
-    "@tanstack/react-query": "^4.3.6",
+    "@tanstack/react-query": "^4.3.9",
     "apollo-server-express": "^3.10.2",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
-    "jotai": "^1.8.3",
+    "jotai": "^1.8.4",
     "jsonwebtoken": "^8.5.1",
     "next": "12.3.0",
     "next-i18next": "^12.0.1",
@@ -58,19 +58,19 @@
     "@graphql-codegen/typescript-resolvers": "2.7.3",
     "@jest/types": "^29.0.3",
     "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "14.7.5",
-    "@nrwl/cypress": "14.7.5",
-    "@nrwl/eslint-plugin-nx": "14.7.5",
-    "@nrwl/jest": "14.7.5",
-    "@nrwl/linter": "14.7.5",
-    "@nrwl/nest": "14.7.5",
-    "@nrwl/next": "14.7.5",
-    "@nrwl/node": "14.7.5",
+    "@nestjs/testing": "^9.1.1",
+    "@nrwl/cli": "14.7.6",
+    "@nrwl/cypress": "14.7.6",
+    "@nrwl/eslint-plugin-nx": "14.7.6",
+    "@nrwl/jest": "14.7.6",
+    "@nrwl/linter": "14.7.6",
+    "@nrwl/nest": "14.7.6",
+    "@nrwl/next": "14.7.6",
+    "@nrwl/node": "14.7.6",
     "@nrwl/nx-cloud": "14.6.2",
-    "@nrwl/react": "14.7.5",
-    "@nrwl/web": "14.7.5",
-    "@nrwl/workspace": "14.7.5",
+    "@nrwl/react": "14.7.6",
+    "@nrwl/web": "14.7.6",
+    "@nrwl/workspace": "14.7.6",
     "@svgr/webpack": "^6.3.1",
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
@@ -101,12 +101,13 @@
     "graphql-tag": "^2.12.6",
     "jest": "29.0.3",
     "jest-environment-jsdom": "29.0.3",
-    "nx": "14.7.5",
+    "nx": "14.7.6",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.3.1",
     "react-test-renderer": "18.2.0",
+    "stylus": "^0.59.0",
     "tailwindcss": "^3.1.8",
     "ts-jest": "29.0.1",
     "ts-node": "10.9.1",
