--- a/libs/graphql/codegen/project.json
+++ b/libs/graphql/codegen/project.json
@@ -11,13 +11,13 @@
       }
     },
     "fetch": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "command": "pnpm graphql-codegen --config libs/graphql/codegen/src/codegen-fetch.ts"
       }
     },
     "graphql-request": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "command": "pnpm graphql-codegen --config libs/graphql/codegen/src/codegen-graphql-request.ts"
       }
