--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
   "private": true,
   "dependencies": {
     "@graphql-typed-document-node/core": "^3.1.1",
+    "@hookform/resolvers": "^2.9.8",
     "@nestjs/apollo": "^10.1.0",
-    "@nestjs/common": "^9.1.1",
-    "@nestjs/core": "^9.1.1",
+    "@nestjs/common": "^9.1.2",
+    "@nestjs/core": "^9.1.2",
     "@nestjs/graphql": "^10.1.2",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.1.1",
+    "@nestjs/platform-express": "^9.1.2",
     "@prisma/client": "^4.3.1",
+    "@repay/react-credit-card": "^1.0.5",
     "@tanstack/react-query": "^4.3.9",
     "apollo-server-express": "^3.10.2",
     "bcrypt": "^5.0.1",
@@ -33,23 +35,25 @@
     "graphql-request": "^5.0.0",
     "jotai": "^1.8.4",
     "jsonwebtoken": "^8.5.1",
-    "next": "12.3.0",
+    "next": "12.3.1",
     "next-i18next": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.36.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.9",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@faker-js/faker": "^7.5.0",
-    "@graphql-codegen/cli": "2.12.0",
-    "@graphql-codegen/client-preset": "1.0.1-alpha-20220823170145-c93d8aee3",
+    "@graphql-codegen/cli": "2.13.1",
+    "@graphql-codegen/client-preset": "1.0.2",
     "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typed-document-node": "^2.3.3",
     "@graphql-codegen/typescript": "2.7.3",
@@ -58,36 +62,36 @@
     "@graphql-codegen/typescript-resolvers": "2.7.3",
     "@jest/types": "^29.0.3",
     "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.1.1",
-    "@nrwl/cli": "14.7.6",
-    "@nrwl/cypress": "14.7.6",
-    "@nrwl/eslint-plugin-nx": "14.7.6",
-    "@nrwl/jest": "14.7.6",
-    "@nrwl/linter": "14.7.6",
-    "@nrwl/nest": "14.7.6",
-    "@nrwl/next": "14.7.6",
-    "@nrwl/node": "14.7.6",
-    "@nrwl/nx-cloud": "14.6.2",
-    "@nrwl/react": "14.7.6",
-    "@nrwl/web": "14.7.6",
-    "@nrwl/workspace": "14.7.6",
+    "@nestjs/testing": "^9.1.2",
+    "@nrwl/cli": "14.8.1",
+    "@nrwl/cypress": "14.8.1",
+    "@nrwl/eslint-plugin-nx": "14.8.1",
+    "@nrwl/jest": "14.8.1",
+    "@nrwl/linter": "14.8.1",
+    "@nrwl/nest": "14.8.1",
+    "@nrwl/next": "14.8.1",
+    "@nrwl/node": "14.8.1",
+    "@nrwl/nx-cloud": "14.7.0",
+    "@nrwl/react": "14.8.1",
+    "@nrwl/web": "14.8.1",
+    "@nrwl/workspace": "14.8.1",
     "@svgr/webpack": "^6.3.1",
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "29.0.3",
+    "@types/jest": "29.1.0",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "18.7.18",
+    "@types/node": "18.7.23",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@types/react": "18.0.20",
+    "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "5.37.0",
-    "@typescript-eslint/parser": "5.37.0",
-    "autoprefixer": "^10.4.11",
-    "babel-jest": "29.0.3",
+    "@typescript-eslint/eslint-plugin": "5.38.1",
+    "@typescript-eslint/parser": "5.38.1",
+    "autoprefixer": "^10.4.12",
+    "babel-jest": "29.1.0",
     "cypress": "^10.8.0",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.26.0",
@@ -99,9 +103,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "express": "^4.18.1",
     "graphql-tag": "^2.12.6",
-    "jest": "29.0.3",
-    "jest-environment-jsdom": "29.0.3",
-    "nx": "14.7.6",
+    "jest": "29.1.1",
+    "jest-environment-jsdom": "29.1.1",
+    "nx": "14.8.1",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
@@ -109,9 +113,9 @@
     "react-test-renderer": "18.2.0",
     "stylus": "^0.59.0",
     "tailwindcss": "^3.1.8",
-    "ts-jest": "29.0.1",
+    "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
-    "typescript": "4.8.3",
+    "typescript": "4.8.4",
     "webpack": "^5.74.0"
   },
   "prisma": {
