--- a/libs/graphql/types/tsconfig.lib.json
+++ b/libs/graphql/types/tsconfig.lib.json
@@ -6,6 +6,6 @@
     "declaration": true,
     "types": ["node"]
   },
-  "exclude": ["**/*.spec.ts", "**/*.test.ts"],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts", "./src/api.ts", "./src/index.ts"],
   "include": ["**/*.ts"]
 }
