--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "docker-api": "docker-compose -f apps/api/docker-compose.yml down && docker-compose -f apps/api/docker-compose.yml up shop-postgres",
+    "dev": "nx run-many --target=serve --projects=app-frontend-shop,app-backend-api",
+    "docker-db": "docker-compose -f apps/api/docker-compose.yml down && docker-compose -f apps/api/docker-compose.yml up shop-postgres",
+    "docker-db-seed": "pnpm prisma-migrate dev && pnpm prisma-seed",
     "prisma-gen": "prisma generate --schema libs/backend/database/model/schema.prisma",
     "prisma-migrate": "prisma migrate dev --schema libs/backend/database/model/schema.prisma --name",
-    "prisma-seed": "prisma db seed"
+    "prisma-seed": "prisma db seed",
+    "readme-icons": "generateReadmeIcons"
   },
   "private": true,
   "dependencies": {
@@ -25,15 +28,14 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.1.4",
     "@prisma/client": "^4.3.1",
-    "@repay/react-credit-card": "^1.0.5",
     "@tanstack/react-query": "^4.10.1",
     "apollo-server-express": "^3.10.2",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
-    "jotai": "^1.8.4",
+    "jotai": "^1.8.5",
     "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
     "next-i18next": "^12.1.0",
@@ -42,7 +44,7 @@
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.36.0",
+    "react-hook-form": "^7.37.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.9",
     "rxjs": "^7.0.0",
@@ -52,8 +54,8 @@
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@faker-js/faker": "^7.5.0",
-    "@graphql-codegen/cli": "2.13.4",
-    "@graphql-codegen/client-preset": "1.0.3",
+    "@graphql-codegen/cli": "2.13.5",
+    "@graphql-codegen/client-preset": "1.0.5",
     "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typed-document-node": "^2.3.3",
     "@graphql-codegen/typescript": "2.7.3",
@@ -78,9 +80,9 @@
     "@svgr/webpack": "^6.4.0",
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "29.1.1",
+    "@types/jest": "29.1.2",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "18.8.2",
+    "@types/node": "18.8.3",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/react": "18.0.21",
@@ -112,6 +114,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.3.1",
     "react-test-renderer": "18.2.0",
+    "readme-package-icons": "^1.1.5",
     "stylus": "^0.59.0",
     "tailwindcss": "^3.1.8",
     "ts-jest": "29.0.3",
