--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -48,14 +48,14 @@
     },
     "type-check": {
       "executor": "nx:run-commands",
-      "outputs": ["dist/apps/api"],
+      "outputs": ["{workspaceRoot}/dist/apps/api"],
       "options": {
         "command": "pnpm tsc -b apps/api/tsconfig.json"
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/api"],
+      "outputs": ["{workspaceRoot}/coverage/apps/api"],
       "options": {
         "jestConfig": "apps/api/jest.config.ts",
         "passWithNoTests": true
