--- a/package.json
+++ b/package.json
@@ -19,104 +19,105 @@
   "private": true,
   "dependencies": {
     "@graphql-typed-document-node/core": "^3.1.1",
-    "@hookform/resolvers": "^2.9.8",
+    "@hookform/resolvers": "^2.9.10",
     "@nestjs/apollo": "^10.1.3",
-    "@nestjs/common": "^9.1.4",
-    "@nestjs/core": "^9.1.4",
+    "@nestjs/common": "^9.1.5",
+    "@nestjs/core": "^9.1.5",
     "@nestjs/graphql": "^10.1.3",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.1.4",
-    "@prisma/client": "^4.3.1",
-    "@tanstack/react-query": "^4.10.1",
-    "apollo-server-express": "^3.10.2",
+    "@nestjs/platform-express": "^9.1.5",
+    "@prisma/client": "^4.5.0",
+    "@tanstack/react-query": "^4.13.0",
+    "apollo-server-express": "^3.10.3",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "core-js": "^3.6.5",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
-    "jotai": "^1.8.5",
+    "jotai": "^1.8.6",
     "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
     "next-i18next": "^12.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.37.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
     "reflect-metadata": "^0.1.13",
-    "regenerator-runtime": "0.13.9",
+    "regenerator-runtime": "0.13.10",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.1",
-    "@faker-js/faker": "^7.5.0",
-    "@graphql-codegen/cli": "2.13.5",
-    "@graphql-codegen/client-preset": "1.0.5",
+    "@babel/core": "^7.19.6",
+    "@faker-js/faker": "^7.6.0",
+    "@graphql-codegen/cli": "2.13.7",
+    "@graphql-codegen/client-preset": "1.1.0",
     "@graphql-codegen/introspection": "2.2.1",
-    "@graphql-codegen/typed-document-node": "^2.3.3",
-    "@graphql-codegen/typescript": "2.7.3",
-    "@graphql-codegen/typescript-operations": "^2.5.3",
-    "@graphql-codegen/typescript-react-query": "^4.0.1",
-    "@graphql-codegen/typescript-resolvers": "2.7.3",
-    "@jest/types": "^29.1.2",
+    "@graphql-codegen/typed-document-node": "^2.3.5",
+    "@graphql-codegen/typescript": "2.7.5",
+    "@graphql-codegen/typescript-operations": "^2.5.5",
+    "@graphql-codegen/typescript-react-query": "^4.0.3",
+    "@graphql-codegen/typescript-resolvers": "2.7.5",
+    "@jest/types": "^29.2.1",
     "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.1.4",
-    "@nrwl/cli": "14.8.3",
-    "@nrwl/cypress": "14.8.3",
-    "@nrwl/eslint-plugin-nx": "14.8.3",
-    "@nrwl/jest": "14.8.3",
-    "@nrwl/linter": "14.8.3",
-    "@nrwl/nest": "14.8.3",
-    "@nrwl/next": "14.8.3",
-    "@nrwl/node": "14.8.3",
-    "@nrwl/nx-cloud": "14.7.0",
-    "@nrwl/react": "14.8.3",
-    "@nrwl/web": "14.8.3",
-    "@nrwl/workspace": "14.8.3",
-    "@svgr/webpack": "^6.4.0",
+    "@nestjs/testing": "^9.1.5",
+    "@nrwl/cli": "15.0.1",
+    "@nrwl/cypress": "15.0.1",
+    "@nrwl/eslint-plugin-nx": "15.0.1",
+    "@nrwl/jest": "15.0.1",
+    "@nrwl/linter": "15.0.1",
+    "@nrwl/nest": "15.0.1",
+    "@nrwl/next": "15.0.1",
+    "@nrwl/node": "15.0.1",
+    "@nrwl/nx-cloud": "15.0.0",
+    "@nrwl/react": "15.0.1",
+    "@nrwl/web": "15.0.1",
+    "@nrwl/workspace": "15.0.1",
+    "@svgr/webpack": "^6.5.0",
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "29.1.2",
+    "@types/jest": "29.2.0",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "18.8.3",
+    "@types/node": "18.11.3",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "5.39.0",
-    "@typescript-eslint/parser": "5.39.0",
+    "@typescript-eslint/eslint-plugin": "5.40.1",
+    "@typescript-eslint/parser": "5.40.1",
     "autoprefixer": "^10.4.12",
-    "babel-jest": "29.1.2",
-    "cypress": "^10.8.0",
-    "eslint": "8.24.0",
+    "babel-jest": "29.2.1",
+    "cypress": "^10.10.0",
+    "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.1",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "express": "^4.18.1",
+    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "express": "^4.18.2",
     "graphql-tag": "^2.12.6",
-    "jest": "29.1.2",
-    "jest-environment-jsdom": "29.1.2",
-    "nx": "14.8.3",
-    "postcss": "^8.4.17",
+    "jest": "29.2.1",
+    "jest-environment-jsdom": "29.2.1",
+    "nx": "15.0.1",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.3.1",
+    "prisma": "^4.5.0",
     "react-test-renderer": "18.2.0",
     "readme-package-icons": "^1.1.5",
     "stylus": "^0.59.0",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.2.1",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
