--- a/libs/frontend/components/project.json
+++ b/libs/frontend/components/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "lib-frontend-components",
+  "name": "front-components-lib",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/frontend/components/src",
   "projectType": "library",
