--- a/libs/graphql/types/project.json
+++ b/libs/graphql/types/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "graphql-types-lib",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/graphql/types/src",
   "projectType": "library",
