--- a/libs/backend/database/project.json
+++ b/libs/backend/database/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "back-database-lib",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/backend/database/src",
   "projectType": "library",
