--- a/libs/frontend/assets/project.json
+++ b/libs/frontend/assets/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "lib-frontend-assets",
+  "name": "front-assets-lib",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/lib-frontend-assets/src",
+  "sourceRoot": "libs/frontend/assets/src",
   "projectType": "library",
   "targets": {},
   "tags": []
