--- a/.github/workflows/tests-scan.yml
+++ b/.github/workflows/tests-scan.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Derive appropriate SHAs for base and head for `nx affected` commands
         uses: nrwl/nx-set-shas@v2.0.2
         with:
-          main-branch-name: master
+          main-branch-name: main
 
       - uses: pnpm/action-setup@v2.2.4
         with:
