--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,8 +19,9 @@
       "@backend/database": ["libs/backend/database/src/index.ts"],
       "@backend/tests": ["libs/backend/tests/src/index.ts"],
       "@front/api": ["libs/graphql/types/src/index.ts"],
+      "@front/assets/*": ["libs/frontend/assets/files/*"],
       "@front/components": ["libs/frontend/components/src/index.ts"],
-      "@front/assets/*": ["libs/frontend/assets/files/*"]
+      "@front/state": ["libs/frontend/state/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
