chore: adding date-fns

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "core-js": "^3.26.0",
+    "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "jotai": "^1.9.0",
