--- a/package.json
+++ b/package.json
@@ -14,115 +14,116 @@
     "prisma-gen": "prisma generate --schema libs/backend/database/model/schema.prisma",
     "prisma-migrate": "prisma migrate dev --schema libs/backend/database/model/schema.prisma --name",
     "prisma-seed": "prisma db seed",
-    "readme-icons": "generateReadmeIcons"
+    "sync-api": "pnpm nx fetch graphql-codegen-lib",
+    "sync-icons": "generateReadmeIcons"
   },
   "private": true,
   "dependencies": {
     "@graphql-typed-document-node/core": "^3.1.1",
     "@hookform/resolvers": "^2.9.10",
-    "@nestjs/apollo": "^10.1.4",
-    "@nestjs/common": "^9.1.6",
-    "@nestjs/core": "^9.1.6",
-    "@nestjs/graphql": "^10.1.5",
+    "@nestjs/apollo": "^10.1.6",
+    "@nestjs/common": "^9.2.0",
+    "@nestjs/core": "^9.2.0",
+    "@nestjs/graphql": "^10.1.6",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.1.6",
-    "@prisma/client": "^4.5.0",
-    "@tanstack/react-query": "^4.13.0",
-    "apollo-server-express": "^3.10.3",
+    "@nestjs/platform-express": "^9.2.0",
+    "@prisma/client": "^4.6.1",
+    "@tanstack/react-query": "^4.16.1",
+    "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "core-js": "^3.26.0",
+    "core-js": "^3.26.1",
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
-    "jotai": "^1.9.0",
+    "jotai": "^1.9.2",
     "jsonwebtoken": "^8.5.1",
-    "next": "13.0.0",
+    "next": "13.0.3",
     "next-i18next": "^12.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.38.0",
+    "react-hook-form": "^7.39.4",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.10",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.4.1",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
+    "@babel/core": "^7.20.2",
     "@faker-js/faker": "^7.6.0",
-    "@graphql-codegen/cli": "2.13.7",
-    "@graphql-codegen/client-preset": "1.1.1",
+    "@graphql-codegen/cli": "2.13.12",
+    "@graphql-codegen/client-preset": "1.1.3",
     "@graphql-codegen/introspection": "2.2.1",
-    "@graphql-codegen/typed-document-node": "^2.3.5",
-    "@graphql-codegen/typescript": "2.8.0",
-    "@graphql-codegen/typescript-operations": "^2.5.5",
-    "@graphql-codegen/typescript-react-query": "^4.0.3",
-    "@graphql-codegen/typescript-resolvers": "2.7.5",
-    "@jest/types": "^29.2.1",
+    "@graphql-codegen/typed-document-node": "^2.3.6",
+    "@graphql-codegen/typescript": "2.8.1",
+    "@graphql-codegen/typescript-operations": "^2.5.6",
+    "@graphql-codegen/typescript-react-query": "^4.0.5",
+    "@graphql-codegen/typescript-resolvers": "2.7.6",
+    "@jest/types": "^29.3.1",
     "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.1.6",
-    "@nrwl/cli": "15.0.3",
-    "@nrwl/cypress": "15.0.3",
-    "@nrwl/eslint-plugin-nx": "15.0.3",
-    "@nrwl/jest": "15.0.3",
-    "@nrwl/linter": "15.0.3",
-    "@nrwl/nest": "15.0.3",
-    "@nrwl/next": "15.0.3",
-    "@nrwl/node": "15.0.3",
-    "@nrwl/nx-cloud": "15.0.0",
-    "@nrwl/react": "15.0.3",
-    "@nrwl/web": "15.0.3",
-    "@nrwl/workspace": "15.0.3",
-    "@svgr/webpack": "^6.5.0",
+    "@nestjs/testing": "^9.2.0",
+    "@nrwl/cli": "15.0.13",
+    "@nrwl/cypress": "15.0.13",
+    "@nrwl/eslint-plugin-nx": "15.0.13",
+    "@nrwl/jest": "15.0.13",
+    "@nrwl/linter": "15.0.13",
+    "@nrwl/nest": "15.0.13",
+    "@nrwl/next": "15.0.13",
+    "@nrwl/node": "15.0.13",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/react": "15.0.13",
+    "@nrwl/web": "15.0.13",
+    "@nrwl/workspace": "15.0.13",
+    "@svgr/webpack": "^6.5.1",
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "29.2.0",
+    "@types/jest": "29.2.3",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "18.11.7",
+    "@types/node": "18.11.9",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
-    "@types/react": "18.0.24",
+    "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "5.41.0",
-    "@typescript-eslint/parser": "5.41.0",
-    "autoprefixer": "^10.4.12",
-    "babel-jest": "29.2.2",
-    "cypress": "^10.11.0",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "autoprefixer": "^10.4.13",
+    "babel-jest": "29.3.1",
+    "cypress": "^11.0.1",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.3",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "^27.1.3",
-    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-jest": "^27.1.5",
+    "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
     "express": "^4.18.2",
     "graphql-tag": "^2.12.6",
-    "jest": "29.2.2",
-    "jest-environment-jsdom": "29.2.2",
-    "nx": "15.0.3",
-    "postcss": "^8.4.18",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
+    "nx": "15.0.13",
+    "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.5.0",
+    "prisma": "^4.6.1",
     "react-test-renderer": "18.2.0",
-    "readme-package-icons": "^1.1.5",
+    "readme-package-icons": "^1.1.7",
     "stylus": "^0.59.0",
-    "tailwindcss": "^3.2.1",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
-    "webpack": "^5.74.0"
+    "webpack": "^5.75.0"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} libs/backend/database/seed/seed-db.ts"
