chore: infinite query for products list

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.4",
+    "react-intersection-observer": "^9.4.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.11",
     "rxjs": "^7.0.0",
@@ -81,6 +82,7 @@
     "@nrwl/web": "15.1.1",
     "@nrwl/workspace": "15.1.1",
     "@svgr/webpack": "^6.5.1",
+    "@tanstack/eslint-plugin-query": "^4.15.1",
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "29.2.3",
