chore: using design system in payment modal

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,12 @@
       "@backend/tests": ["libs/backend/tests/src/index.ts"],
       "@front/api": ["libs/graphql/types/src/index.ts"],
       "@front/assets/*": ["libs/frontend/assets/files/*"],
-      "@front/components": ["libs/frontend/components/src/index.ts"],
+      "@front/components/design-system": [
+        "libs/frontend/components/src/design-system/index.ts"
+      ],
+      "@front/components/specific": [
+        "libs/frontend/components/src/specific/index.ts"
+      ],
       "@front/state": ["libs/frontend/state/src/index.ts"]
     }
   },
