--- a/libs/graphql/codegen/src/react-query.codegen.yml
+++ b/libs/graphql/codegen/src/react-query.codegen.yml
@@ -1,5 +1,5 @@
-outputPath: './libs/graphql/artifacts/src/api'
-schemaUrl: 'http://localhost:3333/graphql'
+outputPath: 'libs/graphql/artifacts/src/api/codegen'
+schemaUrl: NEXT_PUBLIC_GQL_API_URL
 fetcher:
   path: './../../useFetchData'
   functionName: 'useFetchData'
