Switching to react query codegen (#13)
* chore: bumping dependencies

* chore: simplifying productsByPage

* chore: switching to artifacts lib

* chore: react-query codegen config

* chore: graphql codegen stuff

* chore: react-query codegen artifacts

* chore: artifacts lib config

* chore: switching to react-query codegen

* chore: linting fixes

* chore: class-validator issue

* chore: fixing type

* chore: removing custom safari style for selects

* chore: codegen

* chore: fixing linting path

* chore: bumping graphql-codegen-react-query

* chore: fixing infinite query input validation

* chore: useless

* chore: default formaters config

* chore: throwing when not found

* chore: adding missing validation

* chore: bumping deps

* chore: switching to react query codegen (for real)

* chore: fixing pageParams type issue

* chore: codegen linting

* chore: useless alias

--- a/libs/graphql/artifacts/project.json
+++ b/libs/graphql/artifacts/project.json
@@ -1,21 +1,21 @@
 {
-  "name": "graphql-types-lib",
+  "name": "graphql-artifacts-lib",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/graphql/types/src",
+  "sourceRoot": "libs/graphql/artifacts/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/graphql/types/src/custom-types/**/*.ts"]
+        "lintFilePatterns": ["libs/graphql/artifacts/src/api/**/*.ts"]
       }
     },
     "type-check": {
       "executor": "nx:run-commands",
-      "outputs": ["{workspaceRoot}/dist/libs/graphql/types"],
+      "outputs": ["{workspaceRoot}/dist/libs/graphql/artifacts"],
       "options": {
-        "command": "pnpm tsc -b libs/graphql/types/tsconfig.json"
+        "command": "pnpm tsc -b libs/graphql/artifacts/tsconfig.lib.json"
       }
     }
   },
