--- a/package.json
+++ b/package.json
@@ -15,119 +15,133 @@
     "prisma-migrate": "prisma migrate dev --schema libs/backend/database/model/schema.prisma --name",
     "prisma-seed": "prisma db seed",
     "sync-api": "pnpm nx fetch graphql-codegen-lib",
-    "sync-icons": "generateReadmeIcons"
+    "sync-icons": "generateReadmeIcons",
+    "codegen-init": "gqlCodegen-init -c ./libs/graphql/codegen/src -o libs/graphql/artifacts/src/api -u NEXT_PUBLIC_GQL_API_URL",
+    "codegen": "rm -rf libs/graphql/artifacts/src/api/codegen && gqlCodegen -c ./libs/graphql/codegen/src/react-query.codegen.yml"
   },
   "private": true,
   "dependencies": {
     "@graphql-typed-document-node/core": "^3.1.1",
     "@hookform/resolvers": "^2.9.10",
-    "@nestjs/apollo": "^10.1.6",
-    "@nestjs/common": "^9.2.0",
-    "@nestjs/core": "^9.2.0",
-    "@nestjs/graphql": "^10.1.6",
-    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/apollo": "^10.1.7",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/graphql": "^10.1.7",
+    "@nestjs/jwt": "^10.0.1",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.2.0",
-    "@prisma/client": "^4.6.1",
-    "@tanstack/react-query": "^4.18.0",
+    "@nestjs/platform-express": "^9.2.1",
+    "@prisma/client": "^4.9.0",
+    "@tanstack/react-query": "^4.24.4",
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "core-js": "^3.26.1",
+    "class-validator": "^0.14.0",
+    "core-js": "^3.27.2",
     "date-fns": "^2.29.3",
+    "dotenv-flow": "^3.2.0",
     "graphql": "^16.6.0",
-    "graphql-request": "^5.0.0",
-    "jotai": "^1.10.0",
-    "jsonwebtoken": "^8.5.1",
-    "next": "13.0.5",
-    "next-i18next": "^13.0.0",
+    "graphql-request": "^5.1.0",
+    "jotai": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "next": "13.1.6",
+    "next-i18next": "^13.0.3",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.39.6",
+    "react-hook-form": "^7.43.0",
     "react-intersection-observer": "^9.4.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.11",
-    "rxjs": "^7.0.0",
-    "tslib": "^2.4.1",
-    "zod": "^3.19.1"
+    "rxjs": "^7.8.0",
+    "tslib": "^2.5.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-react": "^7.14.5",
     "@faker-js/faker": "^7.6.0",
-    "@graphql-codegen/cli": "2.14.1",
-    "@graphql-codegen/client-preset": "1.1.5",
-    "@graphql-codegen/introspection": "2.2.1",
-    "@graphql-codegen/typed-document-node": "^2.3.7",
-    "@graphql-codegen/typescript": "2.8.2",
-    "@graphql-codegen/typescript-operations": "^2.5.7",
-    "@graphql-codegen/typescript-react-query": "^4.0.6",
-    "@graphql-codegen/typescript-resolvers": "2.7.7",
-    "@jest/types": "^29.3.1",
-    "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.2.0",
-    "@nrwl/cli": "15.2.1",
-    "@nrwl/cypress": "15.2.1",
-    "@nrwl/eslint-plugin-nx": "15.2.1",
-    "@nrwl/jest": "15.2.1",
-    "@nrwl/linter": "15.2.1",
-    "@nrwl/nest": "15.2.1",
-    "@nrwl/next": "15.2.1",
-    "@nrwl/node": "15.2.1",
-    "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/react": "15.2.1",
-    "@nrwl/web": "15.2.1",
-    "@nrwl/workspace": "15.2.1",
-    "@svgr/webpack": "^6.5.1",
-    "@tanstack/eslint-plugin-query": "^4.15.1",
+    "@graphql-codegen/cli": "2.16.5",
+    "@graphql-codegen/client-preset": "1.3.0",
+    "@graphql-codegen/introspection": "2.2.3",
+    "@graphql-codegen/typed-document-node": "^2.3.13",
+    "@graphql-codegen/typescript": "2.8.8",
+    "@graphql-codegen/typescript-operations": "^2.5.13",
+    "@graphql-codegen/typescript-react-query": "^4.1.0",
+    "@graphql-codegen/typescript-resolvers": "2.7.13",
+    "@jest/types": "^29.4.1",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.2.1",
+    "@nrwl/cli": "15.6.3",
+    "@nrwl/cypress": "15.6.3",
+    "@nrwl/eslint-plugin-nx": "15.6.3",
+    "@nrwl/jest": "15.6.3",
+    "@nrwl/linter": "15.6.3",
+    "@nrwl/nest": "15.6.3",
+    "@nrwl/next": "15.6.3",
+    "@nrwl/node": "15.6.3",
+    "@nrwl/nx-cloud": "15.0.3",
+    "@nrwl/react": "15.6.3",
+    "@nrwl/web": "15.6.3",
+    "@nrwl/workspace": "15.6.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^6.1.2",
+    "@tanstack/eslint-plugin-query": "^4.24.0",
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "29.2.3",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "18.11.9",
-    "@types/passport-jwt": "^3.0.7",
-    "@types/passport-local": "^1.0.34",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
+    "@types/jest": "29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "18.11.18",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "5.44.0",
-    "@typescript-eslint/parser": "5.44.0",
-    "autoprefixer": "^10.4.13",
-    "babel-jest": "29.3.1",
-    "cypress": "^11.2.0",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
-    "eslint-config-prettier": "8.5.0",
+    "@typescript-eslint/eslint-plugin": "5.50.0",
+    "@typescript-eslint/parser": "5.50.0",
+    "autoprefixer": "10.4.13",
+    "babel-jest": "29.4.1",
+    "cosmiconfig-toml-loader": "^1.0.0",
+    "css-loader": "^6.7.3",
+    "cypress": "^12.4.1",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "eslint-config-prettier": "8.6.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "^27.1.6",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "express": "^4.18.2",
+    "graphql-codegen-react-query": "^1.0.9",
     "graphql-tag": "^2.12.6",
-    "i18next": "^22.0.6",
-    "jest": "29.3.1",
-    "jest-environment-jsdom": "29.3.1",
-    "nx": "15.2.1",
-    "postcss": "^8.4.19",
-    "prettier": "^2.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.0",
-    "prisma": "^4.6.1",
-    "react-i18next": "^12.0.0",
+    "i18next": "^22.4.9",
+    "jest": "29.4.1",
+    "jest-environment-jsdom": "29.4.1",
+    "nx": "15.6.3",
+    "postcss": "8.4.21",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
+    "prisma": "^4.9.0",
+    "react-i18next": "^12.1.4",
+    "react-refresh": "^0.14.0",
     "react-test-renderer": "18.2.0",
-    "readme-package-icons": "^1.1.7",
+    "readme-package-icons": "^1.1.8",
+    "style-loader": "^3.3.0",
     "stylus": "^0.59.0",
-    "tailwindcss": "^3.2.4",
-    "ts-jest": "29.0.3",
+    "stylus-loader": "^7.1.0",
+    "tailwindcss": "3.2.4",
+    "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "4.9.3",
-    "webpack": "^5.75.0"
+    "ts-toolbelt": "^9.6.0",
+    "typescript": "4.9.5",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.75.0",
+    "webpack-merge": "^5.8.0"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} libs/backend/database/seed/seed-db.ts"
